--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 header {
     width: 100%;
     height: 550px;
-    background: url(images/fon1.jpg);
+    background: url(a9e1d1e4-4787-4058-a0c2-4eaa2982e614.jpg);
     background-size: 100% 239px;
     background-repeat: no-repeat;
     display: flex;
